@@ -17,6 +17,7 @@
 - Added ability to send output to syslog server or log aggregator (Issue #128)
 - Fixed long-standing bug in handling Content Transfer Encoded messages (Issue #141)
 - Added ability to rollback (-b and -B) to a relative time (e.g., 1w,3h) instead of an absolute date time (i.e., "04/11/2020 8:00:00") (Issue #131)
+- Fixed bug preventing recording of last version for a failed backup run (Issue #138)
 
 2.2.12
 ------
